service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: web
  type: LoadBalancer
